--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <div class="wrapper">
-      <h2>Email Valiadtion - JavaScript</h2>
+      <h2>Email Validation - JavaScript</h2>
 
       <form action="#" class="form">
         <div class="input-box">
